backend/api-gateway/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: cryo
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
